Updates to slack api
