# Ibis.Features/_Plugins/Slack/SlackApi.cs
@@ -6,15 +6,12 @@ namespace Ibis.Features._Plugins;
 [Route("api")]
 public class SlackCommands : ControllerBase
 {
-    public IRepository<SlackPost> Posts { get; }
     public IRepository<Room> Rooms { get; }
     public IRepository<Message> Messages { get; }
     public SlackCommands(
-        IRepository<SlackPost> posts, 
         IRepository<Room> rooms, 
         IRepository<Message> messages)
     {
-        Posts = posts;
         Rooms = rooms;
         Messages = messages;
     }
@@ -22,41 +19,79 @@ public class SlackCommands : ControllerBase
     [HttpPost("CreatePost")]
     public async Task<string> Post([FromForm]SlackPost request)
     {
-        bool success = await SaveNewPost(request);
+        var success = await SaveNewPost(request);
 
-        if (!success)
+        if (string.IsNullOrEmpty(success))
         {
             return "Oops! Please format the parameters correctly.";
         } else
         {
-            return $"'{request.text}' - Thank you, your post has been received!";
+            return $"Post successful! {success}";
         }
     }
 
     [ApiExplorerSettings(IgnoreApi = true)]
-    public async Task<bool> SaveNewPost(SlackPost request)
+    public async Task<string> SaveNewPost(SlackPost request)
     {
-        Room room = new();
-        await Rooms.AddAsync(room);
-
-        string[] parseRequest = request.text.Split(' ');
-        string postType = parseRequest[0];
-        string site = parseRequest[1];
-        string tagId = "";
-        request.text = string.Join(' ', parseRequest.Skip(2));
-
-        if (site.Contains('/'))
+        try
         {
-            site = site.Split('/')[0];
-            tagId = site.Split('/')[1];
+            string[] parseRequest = request.text.Split(' ');
+            string postType = parseRequest[0];
+            string site = parseRequest[1].ToLower();
+            string tagId = "";
+            request.text = string.Join(' ', parseRequest.Skip(2));
+
+            if (site.Contains('/'))
+            {
+                tagId = site.Split('/')[1];
+                site = site.Split('/')[0];
+            }
+
+            Room room = Rooms.Query.Where(x => x.Name == site).FirstOrDefault();
+
+            if (room == null)
+            {
+                room = new(site);
+                await Rooms.AddAsync(room);
+            }
+
+            Message message = new Message(room.RoomId, request.text);
+            message.SiteName = site;
+
+            if (!string.IsNullOrEmpty(tagId))
+            {
+                message = Messages.Query.Where(x => x.Tag == tagId).FirstOrDefault();
+
+                if(message == null)
+                {
+                    message = new Message(room.RoomId, request.text);
+                    message.Tag = tagId;                    
+                    Messages.AddAsync(message);
+                } else
+                {
+                    message.SetText(request.text);
+                    Messages.UpdateAsync(message);
+                }
+            } else
+            {
+                Messages.AddAsync(message);
+            }          
+
+            return "\"" + (request.text.Length < 50 ? request.text + "\"" : $"{request.text.Substring(0, 50)}...\"") 
+                + " posted to: " + site + (tagId != null ? ", " + tagId : "");
+        } catch
+        {
+            return "";
         }
 
-        var message = new Message(room.RoomId, request.text);
-        message.SiteName = site;
-        if(!string.IsNullOrEmpty(tagId))
-            message.Tag = tagId;
-        await Messages.AddAsync(message);
+    }
 
-        return true;
+    [ApiExplorerSettings(IgnoreApi = true)]
+    public class SlackPost
+    {
+        public string? user_name { get; set; }
+        public string? text { get; set; }
+        public string? command { get; set; }
+
     }
 }
